--- a/style.css
+++ b/style.css
@@ -70,6 +70,15 @@
     padding: 0 1rem;
 }
 
+.timer_line {
+    position: absolute;
+    bottom: 30.7rem;
+    left: 0px;
+    height: 3px;
+    /* width: 50%; */
+    background: green;
+}
+
 .ans {
     height: auto;
     background-color: white;
@@ -106,11 +115,11 @@
 }
 
 .options .ans.correct {
-    background-color: rgb(70, 230, 70);
+    background-color: rgb(188, 250, 188);
 }
 
 .options .ans.incorrect {
-    background-color: rgb(250, 121, 121);
+    background-color: rgb(247, 192, 192);
 }
 
 .options .ans.disabled {
@@ -127,8 +136,17 @@
     display: flex;
 }
 
+.qst_Footer .btn {
+    display: none;
+}
+
 .qst_Footer .btn:hover {
     background-color: aliceblue;
     color: blue;
     transition: all 0.5 ease;
+}
+
+.result_box {
+    width: 10rem;
+    height: 10rem;
 }
