--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 .Start_BTN,
 .intro_PG,
-.Question_PG {
+.Question_PG,
+.result_BOX {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -49,6 +50,7 @@
 
 .question_BOX {
     max-width: 35rem;
+    max-height: 65rem;
     border-radius: 1rem;
     /* opacity: 50%; */
     display: none;
@@ -146,7 +148,22 @@
     transition: all 0.5 ease;
 }
 
-.result_box {
-    width: 10rem;
-    height: 10rem;
+.result_BOX {
+    max-width: 40rem;
+    /* opacity: 0; */
+    border-radius: 1rem;
+    display: none;
+}
+
+.finish_BTN .btn {
+    border: 1px solid;
+}
+
+.finish_BTN .btn-primary:hover {
+    opacity: 70%;
+}
+
+.finish_BTN .text-primary:hover {
+    background-color: rgb(0,0,255);
+    color: white;
 }
